--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "Google Maps Timeline plugin",
 
   "content_scripts": [{
-    "js": ["lib/moment.min.js", "main.js"],
+    "js": ["lib/moment.min.js", "timeline.js", "main.js"],
     "matches": ["https://www.google.com/maps/timeline?pb*"],
     "all_frames": true,
     "run_at": "document_start"
