--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,7 @@
       "main.js"
     ],
     "matches": ["https://www.google.com/maps/timeline?pb*"],
-    "all_frames": true,
-    "run_at": "document_start"
+    "all_frames": true
   }],
 
   "options_ui": {
