Fix scrobbles not display for first day
We need to run at document_start to ensure we catch the initial set of
changes.

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
       "main.js"
     ],
     "matches": ["https://www.google.com/maps/timeline?pb*"],
-    "all_frames": true
+    "run_at": "document_start"
   }],
 
   "options_ui": {
