--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "timeline-plugin",
+  "name": "Timeline.fm",
   "version": "0.1.0",
-  "description": "Google Maps Timeline plugin",
+  "description": "Display your scrobbled songs on your Google Maps Timeline",
 
   "background": {
     "scripts": ["oninstall.js"],
